# Ark-Server-Plugins

ArkShop/: CMakeLists.txt  GenProject.bat
ArkShop/ArkShop/: CMakeLists.txt
ArkShop/ArkShop/Private/: ArkShop.cpp  CMakeLists.txt  Store.cpp
ArkShop/ArkShop/Private/Database/: CMakeLists.txt  SqlLiteDB.h
ArkShop/ArkShop/Private/UIHandler/: CMakeLists.txt  UIHandler.cpp  UIHandler.h
ArkShop/ArkShop/Public/: CMakeLists.txt  ITimedRewards.h
